--- a/frontend/simulation/index.html
+++ b/frontend/simulation/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet preload" href="styles.css">
     <title>Graph Index</title>
 </head>
-<body>
+<body id="body">
     <div id="content">
         <nav>
             <img src="Logo_2.png" width="50" height="50">
